# new_Raman_Tool

./: .gitignore  README.md  create_shortcut.ps1  launch_raman_tool.pyw  pyproject.toml
src/raman_tool/: __init__.py  __main__.py  cli.py  cli.py.test  config.py  exporters.py  gas_library.py  gui.py  models.py  presets.py  qt_gui.py  safety.py  sorting.py  tui.py
src/raman_tool/processing/: __init__.py  baseline.py  concentration.py  snr.py
src/raman_tool/readers/: __init__.py  asc_reader.py  base.py  bmp_reader.py  jpg_reader.py  sif_reader.py  tif_reader.py  txt_reader.py
src/raman_tool/visualization/: __init__.py  plot.py
test_data/: 10_1.sif  10_2.sif  10_3.sif  10_4.sif  10_5.sif  10_6.sif  10_7.sif  10_8.sif  10_9.sif  demo.txt  fvb-20s.asc  image-200s.sif  image-300s.asc
tests/: test_config.py  test_exporters.py  test_gas_library.py  test_models.py  test_presets.py  test_processing.py  test_qt_presets.py  test_readers.py  test_security_limits.py  test_sorting.py
