[project]
name = "raman-tool"
version = "0.1.0"
description = "拉曼光谱数据处理工具 — 支持多种文件格式读取、可视化、信噪比计算、气体浓度分析"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "pillow>=9.5",
    "rich>=13",
]

[project.optional-dependencies]
gui = ["tkinterdnd2>=0.3"]
qt = ["pyside6>=6.5"]
dev = ["pytest>=8"]

[project.scripts]
raman-tool = "raman_tool.cli:main"

[project.gui-scripts]
raman-tool-gui = "raman_tool.gui:main"
raman-tool-qt = "raman_tool.qt_gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
